<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App details -->
    <string name="app_name">Vlille Checker</string>

    <!-- Common strings -->
    <string name="stations_list">Stations list</string>
    <string name="stations_map">Stations map</string>
    <string name="location">Location</string>
    <string name="itinerary">Itinerary</string>
    <string name="locate">Locate</string>
    <string name="station_out_of_service">The station is out of service</string>
    <string name="station_out_of_service_short">Out of service</string>
    <string name="preferences">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="installation_done">Initialization finished</string>
    <string name="no_station">Add stations in using tabs</string>
    <string name="update_too_long_ago">(too long ago)</string>
    <string name="update_ago">(%1$d %2$s ago)</string>
    <string name="update_too_long_ago_short">too long ago</string>
    <string name="update_ago_short">%1$d %2$s ago</string>
    <string name="timeunit_second">second</string>
    <string name="timeunit_minute">minute</string>
    <string name="open_with">Open with&#8230;</string>

    <!-- Errors -->
    <string name="error_init">Initialization error. Retry with the \"refresh button\"</string>
    <string name="error_occured">An error occurred</string>
    <string name="error_unstable_general">Open data MEL service seems unstable</string>
    <string name="error_unstable_last_update">Open data MEL update routine seems unstable</string>
    <string name="error_no_connection">No network available</string>
    <string name="error_no_stations_near_current_location">None station near your current location</string>
    <string name="error_no_location_found">No location available</string>
    <string name="error_no_gmaps_app_found">No navigation app found</string>

    <!-- Permissions -->
    <string name="permission_missing">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="permission_location_not_granted">Location permission is required for user location on map</string>
    <string name="permission_storage_not_granted">"Storage permission is needed for offline map data caching</string>

    <!-- Home Preferences -->
    <string name="prefs_home_title">Stations display</string>
    <string name="prefs_station_id_visible_title">Id</string>
    <string name="prefs_stations_details_title">Address</string>
    <string name="prefs_station_last_update_visible_title">Update time</string>
    <string name="prefs_location_enable_gps_title">GPS provider</string>
    <string name="prefs_location_enable_gps_summary">Use GPS to locate your position</string>

    <!-- Position Preferences -->
    <string name="prefs_position_title">Location</string>
    <string name="prefs_position_distance">Distance</string>
    <string name="prefs_position_radius_distance_title">Stations around me</string>
    <string name="prefs_position_radius_distance_summary">Within</string>
    <string name="prefs_position_radius_distance_unit">m</string>

    <!-- Data status and update -->
    <string name="data_status_update_done">Update done!</string>
    <string name="data_status_uptodate">Stations are already up to date</string>
    <string name="data_launch_update">Update stations list</string>
    <string name="data_status_title">Data status</string>
    <string name="data_status_stations_number">%1d stations</string>
    <string name="data_status_last_update_summary">Last update: %1s</string>
    <string name="data_status_date_pattern">dd/MM/yyyy HH:mm</string>
    <string name="data_status_never">never</string>

    <!-- Version in preferences -->
    <string name="version">Version</string>

    <!-- Position -->
    <string name="location_enable">Enable location</string>

    <!-- Search -->
    <string name="search_no_result">No result</string>

    <!-- Widget -->
    <string name="widget_label">Add a station - VlilleChecker</string>

    <!-- About -->
    <string name="about_title">About</string>
    <string name="about_text">Vlille Checker is dedicated to the V\'lille users and its Self Service Bikes service.
    \n\n
  	Daily, the application allows you to easily manage:\n
    - your favorite stations to control bikes or slots available;\n
    - find a station near your position.\n\n
    From the home screen, Vlille Checker displays the stations state avoiding unnecessary menus.
    \n\n
    For any comment or suggestion, please contact the developer:
    </string>
    <string name="about_text_email">- <a href="o.jacquemart@gmail.com">o.jacquemart@gmail.com</a></string>
    <string name="about_text_twitter">- <a href="http://www.twitter.com/ojacquemart">twitter/ojacquemart</a></string>
    <string name="about_text_github">- <a href="https://github.com/ojacquemart/vlilleChecker">github/ojacquemart</a></string>

    <!-- ACRA toast notifications texts. -->
    <string name="crash_toast_text">An error occurred&#8230;</string>
</resources>