<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Refresh -->
    <item android:id="@+id/main_menu_refresh"
        android:title="@string/refresh"
        android:icon="@drawable/refresh_selector"
        app:showAsAction="always" />

    <!-- Contextual menus -->
    <item android:id="@+id/main_menu_settings"
        android:title="@string/preferences"
        android:icon="@drawable/ic_menu_settings"
        android:showAsAction="collapseActionView|withText" />
    <item android:id="@+id/main_menu_update_stations"
        android:title="@string/data_launch_update"
        android:icon="@drawable/ic_menu_import_export"
        android:showAsAction="collapseActionView|withText" />

    <item android:id="@+id/main_menu_about"
        android:title="@string/about_title"
        android:icon="@drawable/ic_menu_about"
        android:showAsAction="collapseActionView|withText" />

</menu>