<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/about_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/about_title_size" />

        <ImageView
            android:id="@+id/about_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_title"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_logo"
            android:gravity="center"
            android:text="3.2.0"
            android:textSize="@dimen/about_version_size" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/about_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_text" />

        <TextView
            android:id="@+id/about_text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_text"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="8dp"
            android:text="@string/about_text_email" />

        <TextView
            android:id="@+id/about_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_text_email"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="8dp"
            android:text="@string/about_text_twitter" />

        <TextView
            android:id="@+id/about_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_twitter"
            android:text="@string/about_text_github" />

    </RelativeLayout>
</LinearLayout>